# qdesigner-modern

./: .dockerignore  .env.development  .env.example  .env.test  .gitignore  CLAUDE.md  CONTEXT.md  DEV_SETUP.md  Dockerfile  MIGRATION_SPEC.md  MODULE_CONSOLIDATION_SUMMARY.md  README.md  ROADMAP.md  check_cleanup.txt  check_cleanup_1.txt  check_cleanup_2.txt  check_cleanup_3.txt  check_output.txt  check_output_2.txt  check_output_3.txt  check_output_4.txt  check_output_5.txt  check_output_6.txt  check_output_final.txt  check_phase4.txt  check_phase4_step2.txt  check_results.txt  check_results_2.txt  check_results_3.txt  check_results_4.txt  check_results_5.txt  create-test-user.sql  current_check.txt  docker-compose.test.yml  docker-compose.yml  eslint.config.js  final_check.txt  final_check_phase5.txt  flake.nix  full_check.txt  (+17 more)
.claude/: magic-ui.mcp
.github/: dependabot.yml
.serena/: project.yml
apps/server/: Cargo.toml
apps/server/.sqlx/: query-048819ae4553dffb70b6cd6fb1cea5b1f3205ea103369e660713c83b1e8bed6a.json  query-070723a2628f2bc9a6762c43c19f1f5016ab839058d61e2a05996f8c88f33d86.json  query-09be8c11527a319a10f637900915d0e7f0dc8c09b8a7a65935e6251dc85b0c48.json  query-0b93fdc27b748682219f48efacdc9d9cc0a1d72138996856d701e3a326f1e394.json  query-46c9ddce7bc60055cabb13d2000ce00fd26befb2c89de0927b62f2e574d5b70d.json  query-51c7743ecafb98a6cd58c56bed1cfb1c1e087c1231935790f612867a2e1a43eb.json  query-562b9a30262720153e7fcb61e960174ffa31565ec23a0a6f23a73fa542c432a5.json  query-5b29c89061df0f6e2845c6e37551a8787f34ff810d09e325764945f98047b084.json  query-608c2c71e11dd20d6980894c6772f954405ef04dc1f97d5b5544ec9e139e71df.json  query-94c8424c6ed8fc29429338bd03f03b354acbb019b1ec832063281e7459e72568.json  query-9fa14d96dcea5d4f60aad3f6f910db8af066d3b72078d9aaaa471abc390a0881.json  query-b07188c9f4815425dde47d67a034c374acea868096670897e1ff755384ef1596.json  query-d6304a48185e329c94a4b62466f8558de2a9d16d5140890bd7a96596a599277f.json  query-ea301eecf84098d2c70d210c025738db135ee641019b8dbc366276b5076672d1.json  query-fab046277d936dbf2f9ff5161070d73d8124ef99173a9d58a772083cfda8ca55.json
apps/server/db/migrations/: 003_rbac.sql  005_projects.sql  006_questionnaires.sql  007_sessions_responses.sql  009_functions.sql  010_rls_policies.sql  016_semver_versions.sql  020_questionnaire_comments.sql  021_comments_rls.sql  022_session_variable_projection.sql
apps/server/db/seed/baseline/: 01-roles.sql  02-permissions.sql  03-role-permissions.sql
apps/server/db/seed/test/: 01-test-users.sql  02-test-organization.sql
apps/server/migrations/: 00002_email_verification_codes.sql  00007_organization_domains.sql  00012_session_variable_projection.sql  00013_questionnaire_versions_compat.sql  00014_rls_policies.sql  00018_app_role.sql  00019_sessions_user_id.sql  00020_admin_mutation_policies.sql  00021_fillout_dual_policies.sql  00022_force_rls_admin.sql  00023_org_members_comember_select.sql  00024_response_timing_provenance.sql  00025_media_assets_anon_read.sql  00026_session_fingerprint.sql  00027_quota_counting.sql  00028_cohort_stats.sql  00029_sessions_insert_user_id_guard.sql  00030_dataset_stats.sql  00031_arm_assignment.sql  00032_quota_cells.sql  00033_project_read_scoping.sql  00034_audit_log.sql  00035_custom_roles.sql  00036_invitation_columns.sql  00037_sso.sql  00038_api_keys.sql  00039_scim.sql  00040_org_gdpr.sql  00041_resource_shares.sql  00042_study_series.sql  00043_yjs_state.sql  00044_auth_sessions_zitadel.sql  00045_auth_sessions_sso_provider.sql  00046_media_dimensions.sql  00047_data_export_inflight_unique.sql  00048_trials.sql  00049_trial_stats.sql  00050_projects_select_via_questionnaire_share.sql  00051_authz_rls_immune_functions.sql  00052_project_access_org_override.sql  (+8 more)
apps/server/src/: authz.rs  config.rs  error.rs  housekeeping.rs  lib.rs  main.rs  openapi.rs  state.rs
apps/server/src/api/: access.rs  api_keys.rs  auth.rs  client_errors.rs  comments.rs  csv.rs  dev.rs  gdpr.rs  health.rs  media.rs  mod.rs  organizations.rs  project_invitations.rs  projects.rs  questionnaires.rs  roles.rs  scim.rs  series.rs  sessions.rs  shares.rs  sso.rs  templates.rs  users.rs  zitadel_auth.rs
apps/server/src/api/sessions/: analytics.rs  crud.rs  filter.rs  ingestion.rs  mod.rs  models.rs  quotas.rs  sync.rs
apps/server/src/audit/: mod.rs
apps/server/src/auth/: crypto.rs  jwt.rs  mod.rs  models.rs  oidc_client.rs  password.rs  session.rs  ssrf.rs
apps/server/src/db/: mod.rs
apps/server/src/middleware/: api_key.rs  auth.rs  cors.rs  csrf.rs  fillout_rls_context.rs  mod.rs  rate_limit.rs  rls_context.rs  security_headers.rs  series_rls_context.rs  tx.rs
apps/server/src/rbac/: manager.rs  middleware.rs  mod.rs  models.rs
apps/server/src/series/: mod.rs  schedule.rs
apps/server/src/storage/: s3.rs
apps/server/src/websocket/: handler.rs  manager.rs  mod.rs  redis_bridge.rs  yjs_relay.rs  yjs_seed.rs  yjs_store.rs
apps/server/tests/: account_deletion.rs  analytics_honesty.rs  anon_path_limits.rs  api_keys.rs  arm_assignment.rs  audit_log.rs  auth_flows.rs  authz_matrix.rs  bump_version_semver.rs  cohort_stats.rs  comments_authz.rs  cross_org_project_membership.rs  cross_project_analytics.rs  custom_roles.rs  export_integrity.rs  gdpr.rs  http_access_denial.rs  http_auth_flows.rs  http_client_errors.rs  http_fillout_sessions.rs  http_media_email.rs  invitation_schema.rs  oidc_client.rs  org_seats.rs  ownership_transfer.rs  privilege_escalation.rs  project_invitations.rs  project_questionnaire_count.rs  project_read_isolation.rs  questionnaire_create_conflict.rs  quota_cells.rs  quota_counting.rs  rbac_integration.rs  resource_shares.rs  revoked_tokens_purge.rs  rls_context.rs  rls_enforcement.rs  scim.rs  security_headers.rs  series_authz.rs  (+11 more)
apps/server/tests/common/: mod.rs
(+1851 files in other folders)
