[package]
name = "qdesigner-server"
version = "0.1.0"
edition = "2021"
description = "QDesigner Modern - Rust/Axum backend server"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
aws-sdk-s3 = "1"
aws-config = "1"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
validator = { version = "0.19", features = ["derive"] }
dotenvy = "0.15"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
yrs = "0.25.0"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid", "preserve_order", "preserve_path_order"] }
