[package]
name = "qdesigner-server"
version = "0.1.0"
edition = "2021"
description = "QDesigner Modern - Rust/Axum backend server"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["catch-panic", "cors", "trace"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# Needed to express the refresh-cookie Max-Age (`time::Duration`) when building
# the httpOnly refresh_token cookie in `api::auth`. Same `time` the axum-extra
# `cookie` feature already pulls in transitively; declared directly so it can be
# named here.
time = "0.3"
aws-sdk-s3 = "1"
aws-config = "1"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
validator = { version = "0.19", features = ["derive"] }
dotenvy = "0.15"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
base64 = "0.22"
# Symmetric AEAD for encrypting per-org IdP `client_secret` at rest (E-RBAC-6).
# The 32-byte key is derived (SHA-256) from the config `SSO_ENCRYPTION_KEY`
# (falls back to `JWT_SECRET`); each ciphertext carries its own random nonce.
aes-gcm = "0.10"
# Outbound HTTP for the OIDC federation flow (E-RBAC-6): OpenID discovery
# fetch, JWKS fetch, and the authorization-code → token exchange. rustls so it
# links without system OpenSSL; default-features off drops the native-tls
# default. Mirrors the dev-dependency already declared below.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
yrs = "0.25.0"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid", "preserve_order", "preserve_path_order"] }
infer = "0.16"
# Header-only image dimension sniff at upload time (F-8). Reads just the
# format header (PNG/JPEG/GIF/WEBP/BMP/…) to recover pixel width/height —
# never decodes the full image, so it is cheap on the upload path.
imagesize = "0.13"
# Zip writer for the org GDPR export bundle (E-RBAC-9). default-features off
# drops the bzip2/zstd/lzma/aes codecs; only the deflate path is pulled in
# (flate2/miniz_oxide), keeping the dependency lean.
zip = { version = "2", default-features = false, features = ["deflate"] }
# Optional DNS resolver, compiled only under the `dns-verify` feature. It backs
# the domain-ownership TXT challenge in `api::organizations::verify_domain`
# (F012). The default build deliberately cannot auto-verify a domain — it
# returns a 422 "pending" until an operator opts into real DNS proof by
# building with `--features dns-verify`.
hickory-resolver = { version = "0.24", optional = true }

[features]
# Enable a live DNS TXT lookup at `_qdesigner-verify.<domain>` for domain
# ownership verification. Off by default so the standard build stays lean and
# never performs outbound DNS during a request.
dns-verify = ["dep:hickory-resolver"]

[dev-dependencies]
# HTTP handler round-trip harness (P3-T2): drive `api::router` via
# `tower::ServiceExt::oneshot` and collect response bodies without binding a
# TCP socket. `tower` is already a runtime dep at "0.5"; the `util` feature is
# additive and only pulled in for tests.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# MailPit HTTP API probe (P3-T3): confirm a verification email actually
# landed after the SMTP send path. `rustls-tls` so it links without system
# OpenSSL; `default-features = false` drops the native-tls default.
# (Now also a runtime dependency for the OIDC flow — kept here as well so the
# feature set is explicit for the test harness.)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Mock OIDC provider for the E-RBAC-6 federation tests: stands up an in-process
# HTTP server that serves the discovery document, JWKS, and token endpoint so
# the callback handler can be exercised end-to-end without a live IdP.
wiremock = "0.6"
